--- a/MapReduce/pom.xml
+++ b/MapReduce/pom.xml
@@ -7,7 +7,13 @@
     <groupId>org.sethika</groupId>
     <artifactId>MapReduce</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
