--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -90,6 +90,58 @@ services:
     networks:
       - hadoop
 
+  postgres:
+    image: postgres:13
+    container_name: hive-postgres
+    restart: always
+    environment:
+      POSTGRES_USER: hive
+      POSTGRES_PASSWORD: hive
+      POSTGRES_DB: metastore
+    ports:
+      - "5432:5432"
+    networks:
+      - hadoop
+
+  hive-metastore:
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive-metastore
+    depends_on:
+      - namenode
+      - datanode1
+      - datanode2
+      - postgres
+    ports:
+      - "9083:9083"
+    volumes:
+      - ./config:/opt/hive/conf
+    environment:
+      HIVE_CORE_CONF_fs_defaultFS: hdfs://namenode:9000
+      HIVE_JDBC_URL: jdbc:postgresql://postgres:5432/metastore
+      HIVE_JDBC_USERNAME: hive
+      HIVE_JDBC_PASSWORD: hive
+      HIVE_SITE_CONF_hive_metastore_uris: thrift://hive-metastore:9083
+      SERVICE_PRECONDITION: "namenode:9870 datanode1:9864 datanode2:9864 postgres:5432"
+    networks:
+      - hadoop
+
+  hive-server:
+    image: bde2020/hive:2.3.2-postgresql-metastore
+    container_name: hive-server
+    depends_on:
+      - hive-metastore
+    ports:
+      - "10000:10000"  # HiveServer2
+    volumes:
+      - ./config:/opt/hive/conf
+    environment:
+      HIVE_CORE_CONF_fs_defaultFS: hdfs://namenode:9000
+      HIVE_SITE_CONF_hive_metastore_uris: thrift://hive-metastore:9083
+      SERVICE_PRECONDITION: "namenode:9870 datanode1:9864 datanode2:9864 hive-metastore:9083"
+    networks:
+      - hadoop
+
+
 volumes:
   hadoop_namenode:
   hadoop_datanode1:
