--- a/hadoop-setup/hadoop.env
+++ b/hadoop-setup/hadoop.env
@@ -1,19 +1,24 @@
-CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+# Hadoop core configuration
+CORE_CONF_fs_defaultFS=hdfs://namenode:8020
 
-HDFS_CONF_dfs_namenode_rpc_address=namenode:9000
+# HDFS configuration
+HDFS_CONF_dfs_namenode_rpc_address=namenode:8020
 HDFS_CONF_dfs_replication=1
 
+# MapReduce configuration
 MAPRED_CONF_mapreduce_framework_name=yarn
 MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
 MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
 MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
 
+# YARN configuration
 YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
 YARN_CONF_yarn_nodemanager_pmem_check_enabled=false
 YARN_CONF_yarn_nodemanager_vmem_check_enabled=false
 YARN_CONF_yarn_nodemanager_delete_debug_delay_sec=600
 YARN_CONF_yarn_nodemanager_aux_services=mapreduce_shuffle
 
+# Capacity Scheduler
 CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_maximum_applications=10000
 CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_maximum_am_resource_percent=0.1
 CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_resource_calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
