--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -106,7 +106,7 @@ services:
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
-    hostname: hive-metastore  # Add this line
+    hostname: hive-metastore
     depends_on:
       - namenode
       - datanode1
@@ -124,18 +124,20 @@ services:
       HIVE_SITE_CONF_hive_metastore_uris: thrift://hive-metastore:9083
       SERVICE_PRECONDITION: "namenode:8020 datanode1:9864 datanode2:9864 postgres:5432"
     env_file:
-      - ./hadoop.env  # Add this line to use hadoop.env settings
+      - ./hadoop.env
+    command: /opt/hive/bin/hive --service metastore  # Add this line
     networks:
       - hadoop
 
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-server
-    hostname: hive-server  # Add this line
+    hostname: hive-server
     depends_on:
       - hive-metastore
     ports:
       - "10000:10000"
+      - "10002:10002"  # HiveServer2 Web UI
     volumes:
       - ./config:/opt/hive/conf
     environment:
@@ -143,7 +145,8 @@ services:
       HIVE_SITE_CONF_hive_metastore_uris: thrift://hive-metastore:9083
       SERVICE_PRECONDITION: "namenode:8020 datanode1:9864 datanode2:9864 hive-metastore:9083"
     env_file:
-      - ./hadoop.env  # Add this line to use hadoop.env settings
+      - ./hadoop.env
+    command: /opt/hive/bin/hive --service hiveserver2  # Add this line
     networks:
       - hadoop
 
