--- a/hadoop-setup/hadoop.env
+++ b/hadoop-setup/hadoop.env
@@ -1,34 +1,10 @@
-# Hadoop core configuration
+# HDFS Configuration: Must include the fs.defaultFS for the Hive client
 CORE_CONF_fs_defaultFS=hdfs://namenode:8020
 
-# HDFS configuration
-HDFS_CONF_dfs_namenode_rpc_address=namenode:8020
-HDFS_CONF_dfs_replication=1
-
-# MapReduce configuration
-MAPRED_CONF_mapreduce_framework_name=yarn
-MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=$HADOOP_HOME
-
-# YARN configuration
-YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
-YARN_CONF_yarn_nodemanager_pmem_check_enabled=false
-YARN_CONF_yarn_nodemanager_vmem_check_enabled=false
-YARN_CONF_yarn_nodemanager_delete_debug_delay_sec=600
-YARN_CONF_yarn_nodemanager_aux_services=mapreduce_shuffle
-
-# Capacity Scheduler
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_maximum_applications=10000
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_maximum_am_resource_percent=0.1
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_resource_calculator=org.apache.hadoop.yarn.util.resource.DefaultResourceCalculator
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_queues=default
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_capacity=100
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_user_limit_factor=1
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_maximum_capacity=100
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_state=RUNNING
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_acl_submit_applications=*
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_root_default_acl_administer_queue=*
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_node_locality_delay=40
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_queue_mappings=
-CAPACITY_SCHEDULER_CONF_yarn_scheduler_capacity_queue_mappings_override_enable=false
+# Hive Configuration: Must use underscore convention and point to Postgres
+HIVE_SITE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://hive-metastore-postgresql:5432/metastore
+HIVE_SITE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
+HIVE_SITE_CONF_javax_jdo_option_ConnectionUserName=hive
+HIVE_SITE_CONF_javax_jdo_option_ConnectionPassword=hive
+HIVE_SITE_CONF_hive_metastore_uris=thrift://hive-metastore:9083
+HIVE_SITE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
