Fix hive metastore init

--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -83,7 +83,9 @@ services:
         condition: service_healthy
       namenode:
         condition: service_healthy
-    command: [ "schematool", "-dbType", "postgres", "-initSchema", "-verbose" ]
+    command: >
+      sh -c "schematool -dbType postgres -initSchema -verbose ||
+             schematool -dbType postgres -upgradeSchema -verbose"
     networks:
       - hadoop-net
 
