--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -135,7 +135,7 @@ services:
       - hadoop-net
 
   spark-master:
-    image: apache/spark:3.3.2
+    image: gcr.io/spark-operator/spark-py:v3.3.2
     container_name: spark-master
     environment:
       - SPARK_MODE=master
@@ -148,7 +148,7 @@ services:
       - hadoop-net
 
   spark-worker:
-    image: apache/spark:3.3.2
+    image: gcr.io/spark-operator/spark-py:v3.3.2
     container_name: spark-worker
     environment:
       - SPARK_MODE=worker
