--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -174,6 +174,7 @@ services:
     platform: linux/amd64
     volumes:
       - /home/iitgcpuser/hadoop-demo/hadoop-setup/resources:/opt/resources
+      - /home/iitgcpuser/hadoop-demo/hadoop-setup/hadoop_dir:/opt/hadoop/etc/hadoop   # <- add this
     depends_on:
       - spark-master
     ports:
@@ -184,6 +185,7 @@ services:
       - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
     networks:
       - hadoop-net
+
 
 volumes:
   metastore-db2:
