--- a/hadoop-setup/docker-compose.yaml
+++ b/hadoop-setup/docker-compose.yaml
@@ -168,28 +168,23 @@ services:
     networks:
       - hadoop-net
 
-  zepplin:
-    image: apache/zeppelin:0.9.0
-    container_name: zeppelin
-    platform: linux/amd64
-    volumes:
-      - /home/iitgcpuser/hadoop-demo/hadoop-setup/resources:/opt/resources
-      - /home/iitgcpuser/hadoop-demo/hadoop-setup/hadoop_dir:/opt/hadoop/etc/hadoop
-    depends_on:
-      namenode:
-        condition: service_healthy
-      datanode:
-        condition: service_healthy
-      spark-master:
-        condition: service_healthy
-    ports:
-      - "8089:8080"
-    environment:
-      - SPARK_MASTER=spark://spark-master:7077
-      - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
-    networks:
-      - hadoop-net
+zepplin:
+  image: apache/zeppelin:0.9.0-spark-2.4.8
+  container_name: zeppelin
+  ports:
+    - "8089:8080"
+  environment:
+    - SPARK_MASTER=spark://spark-master:7077
+    - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
+    - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+  volumes:
+    - /home/iitgcpuser/hadoop-demo/hadoop-setup/hadoop_dir:/opt/hadoop/etc/hadoop
+  depends_on:
+    - spark-master
+    - namenode
+    - datanode
+  networks:
+    - hadoop-net
 
 
 
